# mrseql

./: .gitignore  MANIFEST.in  README.md  mrsqm.pkl  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
src/mrseql/: __init__.py  mrseql.cpp  mrseql.pyx  sax_converter.h
tests/mrseql/: test_mrseql.py
